nor year (cannot guess an appropriate filename).
Added respective test.


*****  Fr 15. Jan 17:09:50 CET 2021  *****

Refactored year parsing in Bib.__init__() to allow years 0--999.

*****

Implemented u.warnings_format() to set a custom warnings format.
Modified Bib.__init__() to throw a warning instead of an exception
for a bad year format.
Added respective tests.

*****

Turned invalid-month exception into a warning.
Updated respective tests.

*****

Added key argument to u.parse_name() to display when raising warnings
Turned invalid-author format into too-many-commas warning.
Attemt to correct the entry when that's the case (guessing what
BibTeX does).
Added respective tests.

*****

Bumped bibmanager to version 1.3.1
The next merge should solve #47 #77 #78 #79


*****  Sat Jan 16 14:29:17 CET 2021  *****

Added youtube tutorial for version 1.3 into the docs.

*****

PEP8ed setup.py

*****

PEP8ed utils.py

*****

PEP8ed bib_manager.py

*****

PEP8ed config_manager.py

*****

PEP8ed ads_manager.py

*****

PEP8ed latex_manager.py

*****

Updated api.rst


*****

Updated copyright year to 2021.

*****

Updated copyright year of license in docs.

*****

Last cosmetic edits in docs.

*****

Bumped bibmanager to version 1.3.2


*****  Mi 20. Jan 16:53:38 CET 2021  *****

Refactored VERSION.py to avoid importing the package in setup.py

*****

Bumped bibmanager to version 1.3.3


*****  Wed Jan 27 10:56:51 CET 2021  *****

Added in README.md conda badge, install options, and how to cite.

*****

Added conda badge to docs.
Added Aaron to contributors to docs.

*****

Added conda installing instructions to docs.

*****

Added link to conda setup guideline to docs.

*****

Added badge to setup.py for PyPI description.

*****

Cosmetics.


*****  Sun Feb 28 12:37:05 CET 2021  *****

Fixed some extra typos (besides those corrected by astromancer).

*****

Propagated typo corrections into the docs.

*****

Updated link of license badge to point to RTD docs. 